# github-typer

./: .env.example  pyproject.toml
.devcontainer/: devcontainer.json
githubctl/: _github.py  constants.py  main.py  utils.py
githubctl/cli/: repo.py  stars.py
