[tool.poetry]
name = "githubctl"
version = "0.1.2"
description = ""
authors = ["Peng Xiao <xiaoquwl@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
githubctl = "githubctl.main:app"


[tool.poetry.dependencies]
python = "^3.10"
pygithub = "^2.1.1"
jmespath = "^1.0.1"
typer = {extras = ["all"], version = "^0.9.0"}
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
